fixed closing issues with days before and open during event.

--- a/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
@@ -96,7 +96,7 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
                 adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
                 eventIsClosed = adminOpen;
             } else {
-                eventIsClosed = SeaShared.isEventClosed(eventPage, eventInstance);
+                eventIsClosed = SeaShared.isEventClosed(eventInstance);
             }
 
             //Get the question object questions
