--- a/force-app/main/default/classes/SummitEventsConfirmationController.cls
+++ b/force-app/main/default/classes/SummitEventsConfirmationController.cls
@@ -62,10 +62,16 @@ public with sharing class SummitEventsConfirmationController {
 
                     if (String.isNotBlank(ApexPages.currentPage().getParameters().get('adminopen'))) {
                         adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
-                        eventIsClosed = adminOpen;
+                        if (adminOpen) {
+                            PageReference eventDetailsPageReference = checkEventDetails();
+                            if (eventDetailsPageReference == null) {
+                                eventIsClosed = seaShared.isEventClosed(eventInstance);
+                            }
+                        }
                     } else {
-                        eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+                        eventIsClosed = seaShared.isEventClosed(eventInstance);
                     }
+
                     formattedNavDate = seaShared.navBreadcrumbBuilder(eventInstance);
                 }
 
@@ -96,7 +102,7 @@ public with sharing class SummitEventsConfirmationController {
             adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
             eventIsClosed = adminOpen;
         } else {
-            eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+            eventIsClosed = seaShared.isEventClosed(eventInstance);
         }
 
         // Default to submit page, submit will redirect to beginning if no reg id is present. Prevents pre-filled forms in one step registrations.
