--- a/force-app/main/default/classes/SummitEventsRegisterGuestsController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterGuestsController.cls
@@ -169,7 +169,7 @@ public with sharing class SummitEventsRegisterGuestsController {
                 adminOpen = Boolean.valueOf(ApexPages.currentPage().getParameters().get('adminopen'));
                 eventIsClosed = adminOpen;
             } else {
-                eventIsClosed = seaShared.isEventClosed(eventPage, eventInstance);
+                eventIsClosed = seaShared.isEventClosed(eventInstance);
             }
             formattedNavDate = seaShared.navBreadcrumbBuilder(eventInstance);
 
